<resources>
    <string name="app_name">MyTasks</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--strings da tela de adicionar/update de tasks-->
    <string name="hint_title_add_task">Adicione a task (Obrigatório)</string>
    <string name="hint_date_add_task">Data</string>
    <string name="hint_description_task">Insira uma descrição para a task (Opcional)</string>
    <string name="hint_hour_task">Hora</string>
    <string name="btn_create_newTask">Criar tarefa</string>
    <string name="btn_update_task">Atualizar Tarefa</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="switch_important">Tarefa importante (opcional)</string>
    <string name="optinal_field">Opicional</string>

    <!-- Main Activity  -->
    <string name="no_tasks_txt">Sem tarefas... Adicione uma!</string>


    <!-- Textos dos menus de recyclerView de listagem de tasks-->
    <string name="menu_recycler_edit">Editar</string>
    <string name="menu_recycler_delete">Remover</string>
    <string name="menu_recycler_taskDone">Finalizar Tarefa</string>

</resources>